[package]
name = "named-lock"
version = "0.1.0"
authors = ["oblique <psyberbits@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

description = "Cross-platform implementation of cross-process named locks"
categories = ["os"]
keywords = ["process", "inter-process", "cross-process", "flock", "CreateMutexW"]
repository = "https://github.com/oblique/named-lock"

[dependencies]
thiserror = "1"
once_cell = "1.3"
parking_lot = "0.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2.66"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["handleapi", "synchapi", "winbase", "winnt", "winerror"] }
widestring = "0.4"

[dev-dependencies]
matches = "0.1"
uuid = { version = "0.8", features = ["v4"] }
mitosis = { git = "https://github.com/Manishearth/mitosis", rev = "9105bbd" }
