[package]
name = "named-lock"
version = "0.2.1-alpha.0"
authors = ["oblique <psyberbits@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

description = "Cross-platform implementation of cross-process named locks"
categories = ["os"]
keywords = ["process", "inter-process", "cross-process", "flock", "CreateMutexW"]
repository = "https://github.com/oblique/named-lock"

[dependencies]
thiserror = "1.0.30"
once_cell = "1.10.0"
parking_lot = "0.12.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.124"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["handleapi", "synchapi", "winbase", "winnt", "winerror"] }
widestring = "0.5.1"

[dev-dependencies]
uuid = { version = "1.0.0", features = ["v4"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
