[package]
name = "named-lock"
version = "0.4.1"
authors = ["oblique <psyberbits@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

description = "Cross-platform implementation of cross-process named locks"
categories = ["os"]
keywords = ["process", "inter-process", "cross-process", "flock", "CreateMutexW"]
repository = "https://github.com/oblique/named-lock"

[dependencies]
once_cell = "1.14.0"
parking_lot = { version = "0.12.1", features = ["arc_lock", "send_guard"] }
thiserror = "1.0.35"

[target.'cfg(unix)'.dependencies]
libc = "0.2.132"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.53", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading"] }

[dev-dependencies]
static_assertions = "1.1.0"
uuid = { version = "1.1.2", features = ["v4"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
